{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 68,
  "lineage": "98de2ef6-5251-ac9d-9a7e-14d2b072b7ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:internet-gateway/igw-0197ab7dac693ba36",
            "id": "igw-0197ab7dac693ba36",
            "owner_id": "626109929618",
            "tags": {
              "Name": "jls-event-ticketing-igw"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-igw"
            },
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:626109929618:loadbalancer/app/jls-event-ticketing-alb/980a6f423f6510a7",
            "arn_suffix": "app/jls-event-ticketing-alb/980a6f423f6510a7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jls-event-ticketing-alb-914053704.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:626109929618:loadbalancer/app/jls-event-ticketing-alb/980a6f423f6510a7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jls-event-ticketing-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b454b81688e7c381"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0455837bb06e8b605"
              },
              {
                "subnet_id": "subnet-0d06cd34361c1a3f1"
              }
            ],
            "subnets": [
              "subnet-0455837bb06e8b605",
              "subnet-0d06cd34361c1a3f1"
            ],
            "tags": {
              "Name": "jls-event-ticketing-alb"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-alb"
            },
            "vpc_id": "vpc-0b42925f5b290eeeb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:626109929618:listener/app/jls-event-ticketing-alb/980a6f423f6510a7/d756b94b052781a7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:626109929618:targetgroup/jls-event-ticketing-tg/4e38c5654884fc06",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:626109929618:listener/app/jls-event-ticketing-alb/980a6f423f6510a7/d756b94b052781a7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:626109929618:loadbalancer/app/jls-event-ticketing-alb/980a6f423f6510a7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:626109929618:targetgroup/jls-event-ticketing-tg/4e38c5654884fc06",
            "arn_suffix": "targetgroup/jls-event-ticketing-tg/4e38c5654884fc06",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/index.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:626109929618:targetgroup/jls-event-ticketing-tg/4e38c5654884fc06",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:626109929618:loadbalancer/app/jls-event-ticketing-alb/980a6f423f6510a7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jls-event-ticketing-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jls-event-ticketing-tg"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:route-table/rtb-0e8c4e27eecdea4af",
            "id": "rtb-0e8c4e27eecdea4af",
            "owner_id": "626109929618",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jls-event-ticketing-private-rt"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:route-table/rtb-0f885695ad25b552e",
            "id": "rtb-0f885695ad25b552e",
            "owner_id": "626109929618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0197ab7dac693ba36",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jls-event-ticketing-public-rt"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd7ed8e254a6ff9f",
            "route_table_id": "rtb-0e8c4e27eecdea4af",
            "subnet_id": "subnet-034341ae5a38366dd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0848349c63b61c944",
            "route_table_id": "rtb-0e8c4e27eecdea4af",
            "subnet_id": "subnet-0704314fe3156c571"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d94e1baaf6b2fffc",
            "route_table_id": "rtb-0f885695ad25b552e",
            "subnet_id": "subnet-0455837bb06e8b605"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0651cd5b3fd30acc4",
            "route_table_id": "rtb-0f885695ad25b552e",
            "subnet_id": "subnet-0d06cd34361c1a3f1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:security-group/sg-0b454b81688e7c381",
            "description": "Allow inbound HTTP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b454b81688e7c381",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jls-event-ticketing-alb-sg",
            "name_prefix": "",
            "owner_id": "626109929618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jls-event-ticketing-alb-sg"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:security-group/sg-00a9bb4c0c8935e96",
            "description": "Allow SSH and HTTP from the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a9bb4c0c8935e96",
            "ingress": [
              {
                "cidr_blocks": [
                  "13.218.132.243/32"
                ],
                "description": "SSH from my own IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from the ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b454b81688e7c381"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jls-event-ticketing-ec2-sg",
            "name_prefix": "",
            "owner_id": "626109929618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jls-event-ticketing-ec2-sg"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:security-group/sg-02219a0bf8fbb2a39",
            "description": "Allow MySQL from the EC2 security group only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02219a0bf8fbb2a39",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL/Aurora from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00a9bb4c0c8935e96"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "jls-event-ticketing-rds-sg",
            "name_prefix": "",
            "owner_id": "626109929618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jls-event-ticketing-rds-sg"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:subnet/subnet-034341ae5a38366dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034341ae5a38366dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626109929618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jls-event-ticketing-private-us-east-1a"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-private-us-east-1a"
            },
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:subnet/subnet-0704314fe3156c571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0704314fe3156c571",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626109929618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jls-event-ticketing-private-us-east-1b"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-private-us-east-1b"
            },
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:subnet/subnet-0455837bb06e8b605",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0455837bb06e8b605",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626109929618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jls-event-ticketing-public-us-east-1a"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-public-us-east-1a"
            },
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:subnet/subnet-0d06cd34361c1a3f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d06cd34361c1a3f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626109929618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jls-event-ticketing-public-us-east-1b"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-public-us-east-1b"
            },
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:vpc/vpc-0b42925f5b290eeeb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-036ae6edd77a866fc",
            "default_route_table_id": "rtb-0b4a484e25012a350",
            "default_security_group_id": "sg-075c87179860254a2",
            "dhcp_options_id": "dopt-0765faad71fd9e99a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b42925f5b290eeeb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4a484e25012a350",
            "owner_id": "626109929618",
            "tags": {
              "Name": "jls-event-ticketing-vpc"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626109929618:vpc-endpoint/vpce-0f866c873c702669a",
            "cidr_blocks": [
              "16.15.160.0/19",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18",
              "16.15.156.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f866c873c702669a",
            "ip_address_type": "ipv4",
            "owner_id": "626109929618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0e8c4e27eecdea4af"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "jls-event-ticketing-s3-endpoint"
            },
            "tags_all": {
              "Name": "jls-event-ticketing-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b42925f5b290eeeb"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}